[package]
name = "redis_pp"
type = "lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.4.0"
futures = "0.3.28"
tokio = { version = "1.28", features = ["net", "macros"] }
tokio-util = { version = "0.7", features = ["codec"] }
